--- a/generate_art.html
+++ b/generate_art.html
@@ -37,7 +37,6 @@
                 <div class="flex space-x-4">
                     <a href="index.html" class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Home</a>
                     <a href="generate_art.html" class="text-white px-3 py-2 rounded-md text-sm font-medium">Generate Art</a>
-                    <a href="history.html" class="text-gray-300 hover:text-white px-3 py-2 rounded-md text-sm font-medium">History</a>
                 </div>
             </div>
         </div>
@@ -97,14 +96,7 @@
                             <h3 class="text-lg font-medium text-gray-300">Description</h3>
                             <p id="resultDescription" class="mt-2 text-gray-400"></p>
                         </div>
-                        <div class="mt-6 flex justify-center space-x-4">
-                            <button
-                                id="saveToHistory"
-                                class="px-4 py-2 bg-green-600 hover:bg-green-700 rounded-lg text-white font-medium flex items-center space-x-2"
-                            >
-                                <i class="fas fa-save"></i>
-                                <span>Save to History</span>
-                            </button>
+                        <div class="mt-6 flex justify-center">
                             <button
                                 id="generateNew"
                                 class="px-4 py-2 bg-blue-600 hover:bg-blue-700 rounded-lg text-white font-medium flex items-center space-x-2"
